--- a/laughfactory/static/scss/main.scss
+++ b/laughfactory/static/scss/main.scss
@@ -40,9 +40,11 @@ img{
 .meme-card-header{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-between ;
     width: 90%;
     align-items: center;
+    align-content: center;
+    text-align: center;
     margin-bottom: 1em;
 }
 
@@ -77,6 +79,7 @@ img{
     background-color: $main-color;
     border-color: $main-color;
     margin-left: 0.5em;
+    display: block;
     &:hover{
         background-color: $main-color;
         border-color: $main-color;
